# sustainable-stack

./: .gitignore  .gitmodules  README.md
.github/workflows/: pr-build.yml  pr-gofmt.yml  pr-make.yml
automation/: gofmt.sh
collector/: BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
collector/cmd/: BUILD.bazel  main.go
collector/cmd/amx/: main.go
collector/cmd/qat/: main.go
collector/pkg/amx/: BUILD.bazel  amx.go  amx_utils.go  perf_stat.sh  utils.go
collector/pkg/qat/: qat.go  qat_utils.go
collector/pkg/rapl/: BUILD.bazel  rapl.go  rapl_utils.go
collector/pkg/rest/: BUILD.bazel  scale_pods.go
collector/pkg/telemetry/: tele.go  tele_util.go
collector/pkg/utils/: BUILD.bazel  logger.go
modeling/: README.md
modeling/accelerator/: sequential_model.ipynb
modeling/tdx/: fio.py  setupenv.sh
pmu-tools/: README.md  build.sh  pyproject.toml
tests/kepler/platform-validation/: README.md  cleanup.sh  cpu-arch-check.sh  setup.sh
