[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmutools"
version = "2022.08.29"
authors = [
  { name="Author", email="andi.kleen@intel.com" },
]
description = "a collection of tools and libraries for profile collection and performance analysis"
readme = "pmutools/README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL v2",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "brewer2mpl",
    "pandas",
    "xlsxwriter"
]

[project.scripts]
toplev = "pmutools.toplev.py:__main__"

[project.urls]
"Homepage" = "https://github.com/andikleen/pmu-tools/"
"Bug Tracker" = "https://github.com/andikleen/pmu-tools/issues"

