load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "sustainability.amx/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/amx",
        "//pkg/rapl",
        "//pkg/rest",
        "//pkg/utils",
        "//vendor/github.com/spf13/pflag",
        "//vendor/k8s.io/client-go/util/homedir",
    ],
)

go_binary(
    name = "amx_collector",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
