load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "amx",
    srcs = [
        "amx.go",
        "utils.go",
    ],
    importpath = "sustainability.amx/pkg/amx",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/google/uuid",
    ],
)
