load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rest",
    srcs = ["scale_pods.go"],
    importpath = "sustainability.amx/pkg/rest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/k8s.io/apimachinery/pkg/api/errors",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/client-go/kubernetes",
        "//vendor/k8s.io/client-go/tools/clientcmd",
    ],
)
